--- a/index.css
+++ b/index.css
@@ -5,7 +5,8 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    height: 90vh;
 }
 
 body > *{
@@ -25,7 +26,7 @@ h1{
     font-size: 20px;
     transition: 200ms ease-in;
     cursor: pointer;
-    margin-top: -50px;
+    margin-top: -30px;
 }
 
 #tryagaindiv:hover{
@@ -41,4 +42,8 @@ button{
 
 #spielstand{
     font-size: 60px;
+}
+
+#message{
+    font-size: 30px;
 }
